# SL5-inference

./: .gitignore  .gitmodules  CAmkES-VM_Setup_Guide.md  Compatibility_report.md  README.md
candle-inf/: Cargo.toml  README.md  base-inf.rs
llamacpp-inf/: README.md  base-inf.cpp
mistral.rs-inf/: Cargo.toml  README.md  base-inf.rs
