[package]
name = "candle-inference"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "base-inf"
path = "base-inf.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokenizers = "0.19"
hf-hub = "0.3"
serde = "1.0"
serde_json = "1.0"

# Candle dependencies - referencing from git repository
candle-core = { git = "https://github.com/huggingface/candle.git" }
candle-nn = { git = "https://github.com/huggingface/candle.git" }
candle-transformers = { git = "https://github.com/huggingface/candle.git" }

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
accelerate = ["candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
mkl = ["candle-core/mkl", "candle-nn/mkl"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
