[package]
name = "mistralrs-inference"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "base-inf"
path = "base-inf.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }

# mistral.rs dependencies - referencing from git repository
mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs.git" }

[features]
default = ["cuda"]
cuda = ["mistralrs/cuda"]
metal = ["mistralrs/metal"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
